add weather updates

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -314,6 +314,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['Rain', 'Clouds', 'Mist', 'Clear', 'Fog', 'Drizzle', 'Haze', nan],\n",
+       "      dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "boulder_data.weather_status.unique()"
+   ]
+  },
+  {
    "source": [
     "##  Convert date format to: YYYY/MM/DD HH:MM (hint: datetime package in python)"
    ],
@@ -524,24 +545,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['Rain', 'Clouds', 'Mist', 'Clear', 'Fog', 'Drizzle', 'Haze', nan],\n",
+       "      dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "boulder_data.weather_status.unique()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pd.read_json (r'Path where you saved the JSON file\\File Name.json')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# https://medium.com/analytics-vidhya/best-free-api-for-weather-records-era5-59c0e204829a\n",
+    "import cdsapi\n",
+    "import netCDF4\n",
+    "import numpy\n",
+    "from netCDF4 import num2date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_weather_data(year, month, day, area, time, \n",
+    "                     file_location = 'weather_data.nc'\n",
+    "                    ):\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "        year, month, day, area, time, file_location: Strings\n",
+    "    Outputs:\n",
+    "        file_location: A string as in input\n",
+    "    \"\"\"\n",
+    "    c = cdsapi.Client() \n",
+    "    c.retrieve(\n",
+    "        'reanalysis-era5-single-levels',{\n",
+    "            'product_type':'reanalysis', # This is the dataset produced by the CDS\n",
+    "            'variable':['2m_temperature'],\n",
+    "            'year': year,\n",
+    "            'month': month,\n",
+    "            'day': day,\n",
+    "            'area': area,\n",
+    "            'time': time,\n",
+    "            'format':'netcdf' # The format we choose to use\n",
+    "        },\n",
+    "        file_location)\n",
+    "    return(file_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latitude  = \"50.1109\"\n",
+    "longitude = \"8.6821\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "2020-11-17 08:36:41,133 INFO Welcome to the CDS\n",
+      "2020-11-17 08:36:41,135 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
+      "2020-11-17 08:36:41,318 INFO Request is queued\n",
+      "2020-11-17 08:36:42,338 INFO Request is running\n",
+      "2020-11-17 08:36:46,126 INFO Request is completed\n",
+      "2020-11-17 08:36:46,128 INFO Downloading http://136.156.132.236/cache-compute-0007/cache/data9/adaptor.mars.internal-1605602201.5037096-32354-23-fc6e5845-026b-403e-b38d-5431457821fc.nc to frankfurt_test.nc (1K)\n",
+      "2020-11-17 08:36:46,607 INFO Download rate 2.2K/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_location = get_weather_data(\n",
+    "\tyear  = \"2020\",\n",
+    "    \n",
+    "\t# NB: Single digits days or months must have 0s in front or that will cause an error\n",
+    "\tday   = ['28'],\n",
+    "\tmonth = \"10\",\n",
+    "    \n",
+    "\t# The ERA5 accept rectangular shape grid as a searching areas\n",
+    "\t# but we can use also input a point with this system:ß\n",
+    "\tarea  = latitude +'/'+ longitude +'/'+ latitude +'/'+ longitude,\n",
+    "    \n",
+    "\t# We can request all 24 hours of the day. The only accepted format are listed here:\n",
+    "\ttime  = ['15:00'],\n",
+    "\tfile_location = 'frankfurt_test.nc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "def read_netcdf_file(file_location):\n",
+    "    f = netCDF4.Dataset(file_location) # This the python package I used to open the nc file\n",
+    "    t2m = f.variables['t2m'][:].flatten()\n",
+    "    time = f.variables['time'][:].flatten()\n",
+    "    start_time = datetime.strptime(\"01/01/1900 00:00\", \"%d/%m/%Y %H:%M\")\n",
+    "    time_points = []\n",
+    "    for x in range(len(time)):\n",
+    "        hours_from_start_time = start_time + timedelta(hours=int(time.data[x]))\n",
+    "        time_points.append(hours_from_start_time)\n",
+    "\n",
+    "    values = pd.DataFrame({\n",
+    "        \"t2m\" : [x-273.15 for x in t2m.data if x!= -32767], # As we said the values are in Kelvin, to convert in Celsius we have to subtract 273.15\n",
+    "        \"time\" : time_points\n",
+    "        })\n",
+    "    return(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "         t2m                time\n0  13.452051 2020-10-28 15:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "weather_data = read_netcdf_file('frankfurt_test.nc')\n",
+    "# This is the results:\n",
+    "print(weather_data)"
+   ]
   },
   {
    "cell_type": "code",
