update notebook and add times for missing weather data

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "source": [
-    "## Use the PyOWM API and obtain the weather for the past dates"
+    "## Use the CDS API and obtain the weather for the past dates"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -562,15 +562,6 @@
    ],
    "source": [
     "boulder_data.weather_status.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd.read_json (r'Path where you saved the JSON file\\File Name.json')"
    ]
   },
   {
@@ -705,6 +696,95 @@
     "# This is the results:\n",
     "print(weather_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try to save as csv first\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "gym_name                  dortmund\n",
+       "current_time      2020/09/12 07:00\n",
+       "occupancy                        7\n",
+       "waiting                          0\n",
+       "weather_temp                   NaN\n",
+       "weather_status                 NaN\n",
+       "Name: 1666, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
+   "source": [
+    "boulder_data.loc[1666]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['2020/09/12 07:15', '2020/09/12 07:00', '2020/09/11 22:00',\n",
+       "       '2020/09/11 21:45', '2020/09/11 20:00', '2020/09/11 19:30',\n",
+       "       '2020/09/11 17:00', '2020/09/11 16:00', '2020/09/11 07:15',\n",
+       "       '2020/09/11 07:00', '2020/09/10 22:00', '2020/09/10 20:00',\n",
+       "       '2020/09/10 19:30', '2020/09/10 19:00', '2020/09/10 18:45',\n",
+       "       '2020/09/10 17:00', '2020/09/10 14:00', '2020/09/10 07:00',\n",
+       "       '2020/09/09 20:00', '2020/09/09 19:30', '2020/09/09 17:45',\n",
+       "       '2020/09/09 17:00', '2020/09/09 16:00', '2020/09/09 14:00',\n",
+       "       '2020/09/08 20:00', '2020/09/08 19:30', '2020/09/08 19:00',\n",
+       "       '2020/09/08 17:00', '2020/09/08 16:00', '2020/09/08 07:00',\n",
+       "       '2020/09/07 22:30', '2020/09/07 21:45', '2020/09/07 20:00',\n",
+       "       '2020/09/07 19:30', '2020/09/07 19:00', '2020/09/07 17:00',\n",
+       "       '2020/09/07 16:00', '2020/09/07 14:00', '2020/09/07 07:00',\n",
+       "       '2020/09/06 20:00', '2020/09/06 19:30', '2020/09/06 19:00',\n",
+       "       '2020/09/06 18:00', '2020/09/06 17:00', '2020/09/06 16:00',\n",
+       "       '2020/09/06 15:15', '2020/09/06 14:45', '2020/09/06 14:00',\n",
+       "       '2020/09/06 12:45', '2020/09/06 10:45', '2020/09/06 09:30',\n",
+       "       '2020/09/06 07:15', '2020/09/06 07:00', '2020/09/05 20:00',\n",
+       "       '2020/09/05 19:30', '2020/09/05 19:00', '2020/09/05 18:45',\n",
+       "       '2020/09/05 17:45', '2020/09/05 17:00', '2020/09/05 16:00',\n",
+       "       '2020/09/05 14:45', '2020/09/05 14:15', '2020/09/05 14:00',\n",
+       "       '2020/09/05 13:45', '2020/09/05 13:30', '2020/09/05 10:15',\n",
+       "       '2020/09/05 09:45', '2020/09/05 07:00', '2020/09/04 20:00',\n",
+       "       '2020/09/04 19:30', '2020/09/04 19:00', '2020/09/04 17:00',\n",
+       "       '2020/09/04 15:00', '2020/09/04 14:00', '2020/09/04 07:00',\n",
+       "       '2020/09/03 20:00', '2020/09/03 19:30', '2020/09/03 19:00'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
+   "source": [
+    "boulder_data.loc[1661:1984].current_time.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
