group reusable functions and add missing date/times

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -574,7 +574,9 @@
     "import cdsapi\n",
     "import netCDF4\n",
     "import numpy\n",
-    "from netCDF4 import num2date"
+    "from netCDF4 import num2date\n",
+    "\n",
+    "from datetime import datetime, timedelta"
    ]
   },
   {
@@ -605,7 +607,26 @@
     "            'format':'netcdf' # The format we choose to use\n",
     "        },\n",
     "        file_location)\n",
-    "    return(file_location)"
+    "    return(file_location)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#The function opens the file in format “.nc” and returns a pandas dataframe with the value of temperature and datapoint.\n",
+    "def read_netcdf_file(file_location):\n",
+    "    f = netCDF4.Dataset(file_location) # This the python package I used to open the nc file\n",
+    "    t2m = f.variables['t2m'][:].flatten()\n",
+    "    time = f.variables['time'][:].flatten()\n",
+    "    start_time = datetime.strptime(\"01/01/1900 00:00\", \"%d/%m/%Y %H:%M\")\n",
+    "    time_points = []\n",
+    "    for x in range(len(time)):\n",
+    "        hours_from_start_time = start_time + timedelta(hours=int(time.data[x]))\n",
+    "        time_points.append(hours_from_start_time)\n",
+    "\n",
+    "    values = pd.DataFrame({\n",
+    "        \"t2m\" : [x-273.15 for x in t2m.data if x!= -32767], # As we said the values are in Kelvin, to convert in Celsius we have to subtract 273.15\n",
+    "        \"time\" : time_points\n",
+    "        })\n",
+    "    return(values)"
    ]
   },
   {
@@ -614,8 +635,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latitude  = \"50.1109\"\n",
-    "longitude = \"8.6821\""
+    "latitude  = \"50.1109\"  # frankfurt\n",
+    "longitude = \"8.6821\"  # frankfurt"
    ]
   },
   {
@@ -642,40 +663,16 @@
     "\tyear  = \"2020\",\n",
     "    \n",
     "\t# NB: Single digits days or months must have 0s in front or that will cause an error\n",
-    "\tday   = ['28'],\n",
-    "\tmonth = \"10\",\n",
+    "\tday   = ['03', '04', '05', '06', '07', '08', '09', '10', '11', '12'],\n",
+    "\tmonth = \"09\",\n",
     "    \n",
     "\t# The ERA5 accept rectangular shape grid as a searching areas\n",
     "\t# but we can use also input a point with this system:ß\n",
     "\tarea  = latitude +'/'+ longitude +'/'+ latitude +'/'+ longitude,\n",
     "    \n",
     "\t# We can request all 24 hours of the day. The only accepted format are listed here:\n",
-    "\ttime  = ['15:00'],\n",
+    "\ttime  = ['07:00', '09:00', '10:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00'],\n",
     "\tfile_location = 'frankfurt_test.nc')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime, timedelta\n",
-    "def read_netcdf_file(file_location):\n",
-    "    f = netCDF4.Dataset(file_location) # This the python package I used to open the nc file\n",
-    "    t2m = f.variables['t2m'][:].flatten()\n",
-    "    time = f.variables['time'][:].flatten()\n",
-    "    start_time = datetime.strptime(\"01/01/1900 00:00\", \"%d/%m/%Y %H:%M\")\n",
-    "    time_points = []\n",
-    "    for x in range(len(time)):\n",
-    "        hours_from_start_time = start_time + timedelta(hours=int(time.data[x]))\n",
-    "        time_points.append(hours_from_start_time)\n",
-    "\n",
-    "    values = pd.DataFrame({\n",
-    "        \"t2m\" : [x-273.15 for x in t2m.data if x!= -32767], # As we said the values are in Kelvin, to convert in Celsius we have to subtract 273.15\n",
-    "        \"time\" : time_points\n",
-    "        })\n",
-    "    return(values)"
    ]
   },
   {
