--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -497,6 +497,16 @@
    "metadata": {}
   },
   {
+   "source": [
+    "Exploring the data in the below 3 cells:\n",
+    "- figuring out how many cells don't have weather data\n",
+    "- figuring out how detailed the weather status values are\n",
+    "- figuring out which dates & times I should collect data for"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -566,11 +576,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['2020/09/12 07:15', '2020/09/12 07:00', '2020/09/11 22:00',\n",
+       "       '2020/09/11 21:45', '2020/09/11 20:00', '2020/09/11 19:30',\n",
+       "       '2020/09/11 17:00', '2020/09/11 16:00', '2020/09/11 07:15',\n",
+       "       '2020/09/11 07:00', '2020/09/10 22:00', '2020/09/10 20:00',\n",
+       "       '2020/09/10 19:30', '2020/09/10 19:00', '2020/09/10 18:45',\n",
+       "       '2020/09/10 17:00', '2020/09/10 14:00', '2020/09/10 07:00',\n",
+       "       '2020/09/09 20:00', '2020/09/09 19:30', '2020/09/09 17:45',\n",
+       "       '2020/09/09 17:00', '2020/09/09 16:00', '2020/09/09 14:00',\n",
+       "       '2020/09/08 20:00', '2020/09/08 19:30', '2020/09/08 19:00',\n",
+       "       '2020/09/08 17:00', '2020/09/08 16:00', '2020/09/08 07:00',\n",
+       "       '2020/09/07 22:30', '2020/09/07 21:45', '2020/09/07 20:00',\n",
+       "       '2020/09/07 19:30', '2020/09/07 19:00', '2020/09/07 17:00',\n",
+       "       '2020/09/07 16:00', '2020/09/07 14:00', '2020/09/07 07:00',\n",
+       "       '2020/09/06 20:00', '2020/09/06 19:30', '2020/09/06 19:00',\n",
+       "       '2020/09/06 18:00', '2020/09/06 17:00', '2020/09/06 16:00',\n",
+       "       '2020/09/06 15:15', '2020/09/06 14:45', '2020/09/06 14:00',\n",
+       "       '2020/09/06 12:45', '2020/09/06 10:45', '2020/09/06 09:30',\n",
+       "       '2020/09/06 07:15', '2020/09/06 07:00', '2020/09/05 20:00',\n",
+       "       '2020/09/05 19:30', '2020/09/05 19:00', '2020/09/05 18:45',\n",
+       "       '2020/09/05 17:45', '2020/09/05 17:00', '2020/09/05 16:00',\n",
+       "       '2020/09/05 14:45', '2020/09/05 14:15', '2020/09/05 14:00',\n",
+       "       '2020/09/05 13:45', '2020/09/05 13:30', '2020/09/05 10:15',\n",
+       "       '2020/09/05 09:45', '2020/09/05 07:00', '2020/09/04 20:00',\n",
+       "       '2020/09/04 19:30', '2020/09/04 19:00', '2020/09/04 17:00',\n",
+       "       '2020/09/04 15:00', '2020/09/04 14:00', '2020/09/04 07:00',\n",
+       "       '2020/09/03 20:00', '2020/09/03 19:30', '2020/09/03 19:00'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "source": [
+    "boulder_data.loc[1661:1984].current_time.unique()"
+   ]
+  },
+  {
+   "source": [
+    "In the below cells, I have used [this article](https://medium.com/analytics-vidhya/best-free-api-for-weather-records-era5-59c0e204829a) to download weather data and convert nc format to a pandas dataframe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://medium.com/analytics-vidhya/best-free-api-for-weather-records-era5-59c0e204829a\n",
     "import cdsapi\n",
     "import netCDF4\n",
     "import numpy\n",
@@ -630,8 +692,15 @@
    ]
   },
   {
+   "source": [
+    "Probably not the most efficient way to download data for several cities, but in the next 2 cells, I set the long & lat for the different locations, then download data for that location (for all 6 locations)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,6 +745,14 @@
    ]
   },
   {
+   "source": [
+    "The below cell, I am saving the nc files for all the locations to different pandas dataframes.\n",
+    "I will save muenchen-west and muenchen-ost to the same nc file so I am able to add to the main boulder_data dataframe."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -692,88 +769,6 @@
     "weather_data = read_netcdf_file('frankfurt_test.nc')\n",
     "# This is the results:\n",
     "print(weather_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# try to save as csv first\n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "gym_name                  dortmund\n",
-       "current_time      2020/09/12 07:00\n",
-       "occupancy                        7\n",
-       "waiting                          0\n",
-       "weather_temp                   NaN\n",
-       "weather_status                 NaN\n",
-       "Name: 1666, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 66
-    }
-   ],
-   "source": [
-    "boulder_data.loc[1666]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array(['2020/09/12 07:15', '2020/09/12 07:00', '2020/09/11 22:00',\n",
-       "       '2020/09/11 21:45', '2020/09/11 20:00', '2020/09/11 19:30',\n",
-       "       '2020/09/11 17:00', '2020/09/11 16:00', '2020/09/11 07:15',\n",
-       "       '2020/09/11 07:00', '2020/09/10 22:00', '2020/09/10 20:00',\n",
-       "       '2020/09/10 19:30', '2020/09/10 19:00', '2020/09/10 18:45',\n",
-       "       '2020/09/10 17:00', '2020/09/10 14:00', '2020/09/10 07:00',\n",
-       "       '2020/09/09 20:00', '2020/09/09 19:30', '2020/09/09 17:45',\n",
-       "       '2020/09/09 17:00', '2020/09/09 16:00', '2020/09/09 14:00',\n",
-       "       '2020/09/08 20:00', '2020/09/08 19:30', '2020/09/08 19:00',\n",
-       "       '2020/09/08 17:00', '2020/09/08 16:00', '2020/09/08 07:00',\n",
-       "       '2020/09/07 22:30', '2020/09/07 21:45', '2020/09/07 20:00',\n",
-       "       '2020/09/07 19:30', '2020/09/07 19:00', '2020/09/07 17:00',\n",
-       "       '2020/09/07 16:00', '2020/09/07 14:00', '2020/09/07 07:00',\n",
-       "       '2020/09/06 20:00', '2020/09/06 19:30', '2020/09/06 19:00',\n",
-       "       '2020/09/06 18:00', '2020/09/06 17:00', '2020/09/06 16:00',\n",
-       "       '2020/09/06 15:15', '2020/09/06 14:45', '2020/09/06 14:00',\n",
-       "       '2020/09/06 12:45', '2020/09/06 10:45', '2020/09/06 09:30',\n",
-       "       '2020/09/06 07:15', '2020/09/06 07:00', '2020/09/05 20:00',\n",
-       "       '2020/09/05 19:30', '2020/09/05 19:00', '2020/09/05 18:45',\n",
-       "       '2020/09/05 17:45', '2020/09/05 17:00', '2020/09/05 16:00',\n",
-       "       '2020/09/05 14:45', '2020/09/05 14:15', '2020/09/05 14:00',\n",
-       "       '2020/09/05 13:45', '2020/09/05 13:30', '2020/09/05 10:15',\n",
-       "       '2020/09/05 09:45', '2020/09/05 07:00', '2020/09/04 20:00',\n",
-       "       '2020/09/04 19:30', '2020/09/04 19:00', '2020/09/04 17:00',\n",
-       "       '2020/09/04 15:00', '2020/09/04 14:00', '2020/09/04 07:00',\n",
-       "       '2020/09/03 20:00', '2020/09/03 19:30', '2020/09/03 19:00'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 70
-    }
-   ],
-   "source": [
-    "boulder_data.loc[1661:1984].current_time.unique()"
    ]
   },
   {
