start weather data download for different cities

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -501,7 +501,9 @@
     "Exploring the data in the below 3 cells:\n",
     "- figuring out how many cells don't have weather data\n",
     "- figuring out how detailed the weather status values are\n",
-    "- figuring out which dates & times I should collect data for"
+    "- figuring out which dates & times I should collect data for\n",
+    "\n",
+    "When testing the API, I checked if a temp in frankfurt matched up with a temp that we have in the dataset, and it was slightly different."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -629,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,20 +712,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "2020-11-17 08:36:41,133 INFO Welcome to the CDS\n",
-      "2020-11-17 08:36:41,135 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
-      "2020-11-17 08:36:41,318 INFO Request is queued\n",
-      "2020-11-17 08:36:42,338 INFO Request is running\n",
-      "2020-11-17 08:36:46,126 INFO Request is completed\n",
-      "2020-11-17 08:36:46,128 INFO Downloading http://136.156.132.236/cache-compute-0007/cache/data9/adaptor.mars.internal-1605602201.5037096-32354-23-fc6e5845-026b-403e-b38d-5431457821fc.nc to frankfurt_test.nc (1K)\n",
-      "2020-11-17 08:36:46,607 INFO Download rate 2.2K/s\n"
+      "2020-11-25 08:38:50,929 INFO Welcome to the CDS\n",
+      "2020-11-25 08:38:50,931 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
+      "2020-11-25 08:38:51,006 INFO Request is queued\n",
+      "2020-11-25 08:38:53,550 INFO Request is running\n",
+      "2020-11-25 08:39:11,913 INFO Request is completed\n",
+      "2020-11-25 08:39:11,914 INFO Downloading http://136.156.132.210/cache-compute-0005/cache/data4/adaptor.mars.internal-1606293532.5810573-24156-23-e6b360fa-9d90-44e7-a753-b486b0c65022.nc to frankfurt.nc (1.9K)\n",
+      "2020-11-25 08:39:11,963 INFO Download rate 38.4K/s\n"
      ]
     }
    ],
@@ -741,7 +743,7 @@
     "    \n",
     "\t# We can request all 24 hours of the day. The only accepted format are listed here:\n",
     "\ttime  = ['07:00', '09:00', '10:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00'],\n",
-    "\tfile_location = 'frankfurt_test.nc')"
+    "\tfile_location = 'frankfurt.nc')"
    ]
   },
   {
@@ -754,29 +756,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "         t2m                time\n0  13.452051 2020-10-28 15:00:00\n"
+      "           t2m                time\n0    13.327083 2020-09-03 07:00:00\n1    17.878337 2020-09-03 09:00:00\n2    19.317604 2020-09-03 10:00:00\n3    21.331229 2020-09-03 12:00:00\n4    21.524689 2020-09-03 13:00:00\n..         ...                 ...\n135  22.969497 2020-09-12 18:00:00\n136  21.181857 2020-09-12 19:00:00\n137  19.857992 2020-09-12 20:00:00\n138  18.789022 2020-09-12 21:00:00\n139  17.434077 2020-09-12 22:00:00\n\n[140 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
-    "weather_data = read_netcdf_file('frankfurt_test.nc')\n",
+    "frankfurt_data = read_netcdf_file('frankfurt.nc')\n",
     "# This is the results:\n",
-    "print(weather_data)"
+    "print(frankfurt_data)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- I need to convert the columns to have the same format as boulder_data (temp to 2 d.p. and time without seconds)\n",
+    "- I then need to add data to the main dataframe for each specific location and time"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
