--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "source": [
-    "## Use the CDS API and obtain the weather for the past dates"
+    "## Use the CDS API and obtain the weather data for the past dates"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -695,37 +695,43 @@
   },
   {
    "source": [
-    "Probably not the most efficient way to download data for several cities, but in the next 2 cells, I set the long & lat for the different locations, then download data for that location (for all 6 locations)."
+    "Probably not the most efficient way to download data for several cities, but in the next 2 cells, I set the long & lat for the different locations, then downloaded data for that location (for all 6 locations)."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "latitude  = \"50.1109\"  # frankfurt\n",
-    "longitude = \"8.6821\"  # frankfurt"
+    "# latitude  = \"50.1109\"  # frankfurt\n",
+    "# longitude = \"8.6821\"  # frankfurt\n",
+    "# latitude = \"51.5136\" #  dortmund\n",
+    "# longitude = \"7.4653\" # dortmund\n",
+    "# latitude = \"49.0134\" #  regensburg\n",
+    "# longitude = \"12.1016\" #  regensburg\n",
+    "latitude = \"48.1351\" #  munich\n",
+    "longitude = \"11.5820\" #  munich\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "2020-11-25 08:38:50,929 INFO Welcome to the CDS\n",
-      "2020-11-25 08:38:50,931 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
-      "2020-11-25 08:38:51,006 INFO Request is queued\n",
-      "2020-11-25 08:38:53,550 INFO Request is running\n",
-      "2020-11-25 08:39:11,913 INFO Request is completed\n",
-      "2020-11-25 08:39:11,914 INFO Downloading http://136.156.132.210/cache-compute-0005/cache/data4/adaptor.mars.internal-1606293532.5810573-24156-23-e6b360fa-9d90-44e7-a753-b486b0c65022.nc to frankfurt.nc (1.9K)\n",
-      "2020-11-25 08:39:11,963 INFO Download rate 38.4K/s\n"
+      "2020-12-03 09:08:49,142 INFO Welcome to the CDS\n",
+      "2020-12-03 09:08:49,146 INFO Sending request to https://cds.climate.copernicus.eu/api/v2/resources/reanalysis-era5-single-levels\n",
+      "2020-12-03 09:08:49,244 INFO Request is queued\n",
+      "2020-12-03 09:08:50,264 INFO Request is running\n",
+      "2020-12-03 09:08:57,440 INFO Request is completed\n",
+      "2020-12-03 09:08:57,441 INFO Downloading http://136.156.133.32/cache-compute-0009/cache/data8/adaptor.mars.internal-1606986529.3884299-5088-11-3ad8d61a-1167-4305-a2e6-104831b54d1d.nc to munich.nc (1.9K)\n",
+      "2020-12-03 09:08:57,474 INFO Download rate 59.3K/s\n"
      ]
     }
    ],
@@ -743,7 +749,7 @@
     "    \n",
     "\t# We can request all 24 hours of the day. The only accepted format are listed here:\n",
     "\ttime  = ['07:00', '09:00', '10:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00'],\n",
-    "\tfile_location = 'frankfurt.nc')"
+    "\tfile_location = 'munich.nc')"
    ]
   },
   {
@@ -756,30 +762,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "           t2m                time\n0    13.327083 2020-09-03 07:00:00\n1    17.878337 2020-09-03 09:00:00\n2    19.317604 2020-09-03 10:00:00\n3    21.331229 2020-09-03 12:00:00\n4    21.524689 2020-09-03 13:00:00\n..         ...                 ...\n135  22.969497 2020-09-12 18:00:00\n136  21.181857 2020-09-12 19:00:00\n137  19.857992 2020-09-12 20:00:00\n138  18.789022 2020-09-12 21:00:00\n139  17.434077 2020-09-12 22:00:00\n\n[140 rows x 2 columns]\n"
+      "           t2m                time\n0    13.936501 2020-09-03 07:00:00\n1    14.447715 2020-09-03 09:00:00\n2    14.773861 2020-09-03 10:00:00\n3    14.452797 2020-09-03 12:00:00\n4    14.701306 2020-09-03 13:00:00\n..         ...                 ...\n135  17.286114 2020-09-12 18:00:00\n136  16.143464 2020-09-12 19:00:00\n137  15.108244 2020-09-12 20:00:00\n138  14.320656 2020-09-12 21:00:00\n139  12.949301 2020-09-12 22:00:00\n\n[140 rows x 2 columns]\n"
      ]
     }
    ],
    "source": [
     "frankfurt_data = read_netcdf_file('frankfurt.nc')\n",
-    "# This is the results:\n",
-    "print(frankfurt_data)"
+    "dortmund_data = read_netcdf_file('dortmund.nc')\n",
+    "regensburg_data = read_netcdf_file('regensburg.nc')\n",
+    "muenchen_ost_data = read_netcdf_file('munich.nc')\n",
+    "muenchen_west_data = read_netcdf_file('munich.nc')\n",
+    "# This is an example of the result:\n",
+    "print(dortmund_data)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "- I need to convert the columns to have the same format as boulder_data (temp to 2 d.p. and time without seconds)\n",
-    "- I then need to add data to the main dataframe for each specific location and time"
+    "# Converting the \"time\" columns to have the same format as boulder_data (time without seconds)\n",
+    "dortmund_data[\"time\"] = pd.to_datetime(dortmund_data[\"time\"], format='%Y-%m-%d %H:%M:%S').dt.strftime('%Y/%m/%d %H:%M')\n",
+    "\n",
+    "frankfurt_data[\"time\"] = pd.to_datetime(frankfurt_data[\"time\"], format='%Y-%m-%d %H:%M:%S').dt.strftime('%Y/%m/%d %H:%M')\n",
+    "\n",
+    "regensburg_data[\"time\"] = pd.to_datetime(regensburg_data[\"time\"], format='%Y-%m-%d %H:%M:%S').dt.strftime('%Y/%m/%d %H:%M')\n",
+    "\n",
+    "muenchen_ost_data[\"time\"] = pd.to_datetime(muenchen_ost_data[\"time\"], format='%Y-%m-%d %H:%M:%S').dt.strftime('%Y/%m/%d %H:%M')\n",
+    "\n",
+    "muenchen_west_data[\"time\"] = pd.to_datetime(muenchen_west_data[\"time\"], format='%Y-%m-%d %H:%M:%S').dt.strftime('%Y/%m/%d %H:%M')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting the \"t2m\" columns to have the same format as boulder_data (temp to 2 d.p.)\n",
+    "\n",
+    "dortmund_data[\"t2m\"] = dortmund_data[\"t2m\"].round(2)\n",
+    "frankfurt_data[\"t2m\"] = frankfurt_data[\"t2m\"].round(2)\n",
+    "regensburg_data[\"t2m\"] = regensburg_data[\"t2m\"].round(2)\n",
+    "muenchen_ost_data[\"t2m\"] = muenchen_ost_data[\"t2m\"].round(2)\n",
+    "muenchen_west_data[\"t2m\"] = muenchen_west_data[\"t2m\"].round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "       t2m              time\n",
+       "0    13.33  2020/09/03 07:00\n",
+       "1    17.88  2020/09/03 09:00\n",
+       "2    19.32  2020/09/03 10:00\n",
+       "3    21.33  2020/09/03 12:00\n",
+       "4    21.52  2020/09/03 13:00\n",
+       "..     ...               ...\n",
+       "135  22.97  2020/09/12 18:00\n",
+       "136  21.18  2020/09/12 19:00\n",
+       "137  19.86  2020/09/12 20:00\n",
+       "138  18.79  2020/09/12 21:00\n",
+       "139  17.43  2020/09/12 22:00\n",
+       "\n",
+       "[140 rows x 2 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t2m</th>\n      <th>time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>13.33</td>\n      <td>2020/09/03 07:00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>17.88</td>\n      <td>2020/09/03 09:00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>19.32</td>\n      <td>2020/09/03 10:00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>21.33</td>\n      <td>2020/09/03 12:00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>21.52</td>\n      <td>2020/09/03 13:00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>135</th>\n      <td>22.97</td>\n      <td>2020/09/12 18:00</td>\n    </tr>\n    <tr>\n      <th>136</th>\n      <td>21.18</td>\n      <td>2020/09/12 19:00</td>\n    </tr>\n    <tr>\n      <th>137</th>\n      <td>19.86</td>\n      <td>2020/09/12 20:00</td>\n    </tr>\n    <tr>\n      <th>138</th>\n      <td>18.79</td>\n      <td>2020/09/12 21:00</td>\n    </tr>\n    <tr>\n      <th>139</th>\n      <td>17.43</td>\n      <td>2020/09/12 22:00</td>\n    </tr>\n  </tbody>\n</table>\n<p>140 rows × 2 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 125
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "source": [
+    "# checking the time and temp format changed correctly\n",
+    "\n",
+    "frankfurt_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I then need to add data to the main dataframe for each specific location and time\n",
+    "\n",
+    "def gym_check(gym_name):\n",
+    "    # I need help understanding how to make this more efficient\n",
+    "    \"\"\"This function returns the respective CDS df \"\"\"\n",
+    "    if gym_name == \"regensburg\":\n",
+    "        return regensburg_data\n",
+    "    if gym_name == \"dortmund\":\n",
+    "        return dortmund_data\n",
+    "    if gym_name == \"frankfurt\":\n",
+    "        return frankfurt_data\n",
+    "    if gym_name == \"muenchen-ost\":\n",
+    "        return muenchen_ost_data\n",
+    "    if gym_name == \"muenchen-west\":\n",
+    "        return muenchen_west_data\n",
+    "\n",
+    "\n",
+    "for i in range(1661, 1984):\n",
+    "    # 1 - return correct cds df\n",
+    "    # 2 - check if boulder_data.loc[i][\"current_time\"] matches any of the cds df[\"time\"]\n",
+    "    # (reminder, cds data is hourly)\n",
+    "    # 3 - replace weather temp and status\n",
+    "\n",
+    "    cds = gym_check(boulder_data.loc[i][\"gym_name\"])\n",
+    "    new = cds[cds['time'].astype(str).str[:-3].str.contains(boulder_data.loc[i][\"current_time\"].split(\":\")[0])].t2m\n",
+    "    boulder_data['weather_temp'][i] = new\n",
+    "    boulder_data['weather_status'][i] = \"Clouds\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "gym_name             muenchen-west\n",
+       "current_time      2020/09/03 19:00\n",
+       "occupancy                       61\n",
+       "waiting                          0\n",
+       "weather_temp                 15.21\n",
+       "weather_status              Clouds\n",
+       "Name: 1983, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 193
+    }
+   ],
+   "source": [
+    "boulder_data.loc[1983]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [gym_name, current_time, occupancy, waiting, weather_temp, weather_status]\n",
+       "Index: []"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 194
+    }
+   ],
+   "source": [
+    "# check if any weather info is missing\n",
+    "boulder_data.loc[boulder_data['weather_temp'].isnull()]\n",
+    "boulder_data.loc[boulder_data['weather_status'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
