clean data and add new notebook

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -27,8 +27,22 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Data Cleaning\n",
+    "\n",
+    "- Delete rows at night (current_time before 7:00, and after 23:00)\n",
+    "- Delete rows where minute is not in 00, 15, 30 or 45\n",
+    "- Convert ost and west from the old format to muenchen-ost, muenchen-west to new format\n",
+    "- Convert date format to: YYYY/MM/DD HH:MM (hint: datetime package in python)\n",
+    "- Use the CDS API and obtain the weather data for the past dates\n",
+    "- Save the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,37 +431,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-4-f155b6f16c70>:4: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  boulder_data[\"current_time\"][10:200] = pd.to_datetime(boulder_data['current_time'][10:200], format='%Y-%m-%d %H:%M').dt.strftime('%Y/%m/%d %H:%M')\n/Users/Anglina/opt/anaconda3/envs/boulderang/lib/python3.8/site-packages/pandas/core/indexing.py:670: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  iloc._setitem_with_indexer(indexer, value)\n"
+     ]
+    }
+   ],
    "source": [
     "# boulder_data.info()\n",
     "# applied the below function to all rows [10:200] but the other rows were already in the correct format (but some dates coincide with other rows (e.g. 25-29 with 200-205))\n",
     "# should check for duplicates\n",
-    "boulder_data[\"current_time\"][10:200] = pd.to_datetime(boulder_data['current_time'][10:200], format='%d/%m/%Y %H:%M').dt.strftime('%Y-%m-%d %H:%M')\n"
+    "boulder_data[\"current_time\"][10:200] = pd.to_datetime(boulder_data['current_time'][10:200], format='%Y-%m-%d %H:%M').dt.strftime('%Y/%m/%d %H:%M')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "24    2020-10-28 19:30\n",
-       "25    2020-10-28 16:00\n",
-       "26    2020-10-28 16:00\n",
-       "27    2020-10-28 16:00\n",
-       "28    2020-10-28 16:00\n",
-       "29    2020-10-28 16:00\n",
-       "30    2020-10-28 15:00\n",
+       "24    2020/10/28 19:30\n",
+       "25    2020/10/28 16:00\n",
+       "26    2020/10/28 16:00\n",
+       "27    2020/10/28 16:00\n",
+       "28    2020/10/28 16:00\n",
+       "29    2020/10/28 16:00\n",
+       "30    2020/10/28 15:00\n",
        "Name: current_time, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 5
     }
    ],
    "source": [
@@ -487,6 +509,149 @@
    "source": [
     "# checking where the error was\n",
     "boulder_data.loc[boulder_data['current_time'] == '2020/10/28 15:00']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['2020/10/29 17:00', '2020/10/29 16:45', '2020/10/29 15:00',\n",
+       "       '2020/10/28 20:00', '2020/10/28 19:30', '2020/10/28 16:00',\n",
+       "       '2020/10/28 15:00', '2020/10/27 20:00', '2020/10/27 17:00',\n",
+       "       '2020/10/27 16:00', '2020/10/27 15:00', '2020/10/27 07:00',\n",
+       "       '2020/10/26 20:00', '2020/10/26 17:00', '2020/10/26 16:00',\n",
+       "       '2020/10/26 15:00', '2020/10/25 20:00', '2020/10/25 17:00',\n",
+       "       '2020/10/25 16:00', '2020/10/25 15:00', '2020/10/25 09:00',\n",
+       "       '2020/10/25 08:00', '2020/10/25 07:00', '2020/10/24 22:00',\n",
+       "       '2020/10/24 20:00', '2020/10/24 18:00', '2020/10/24 17:00',\n",
+       "       '2020/10/24 16:00', '2020/10/24 15:00', '2020/10/23 20:00',\n",
+       "       '2020/10/23 17:00', '2020/10/23 07:00', '2020/10/22 20:00',\n",
+       "       '2020/10/22 17:00', '2020/10/22 16:00', '2020/10/22 15:00',\n",
+       "       '2020/10/22 07:00', '2020/10/21 20:00', '2020/10/21 19:30',\n",
+       "       '2020/10/21 16:00', '2020/10/21 15:00', '2020/10/21 07:00',\n",
+       "       '2020/10/20 20:00', '2020/10/20 19:30', '2020/10/20 17:00',\n",
+       "       '2020/10/20 16:00', '2020/10/20 15:00', '2020/10/20 07:00',\n",
+       "       '2020/10/19 20:00', '2020/10/19 19:30', '2020/10/19 17:00',\n",
+       "       '2020/10/19 15:00', '2020/10/19 07:00', '2020/10/18 20:00',\n",
+       "       '2020/10/18 19:30', '2020/10/18 19:00', '2020/10/18 16:00',\n",
+       "       '2020/10/18 15:00', '2020/10/18 07:00', '2020/10/17 20:00',\n",
+       "       '2020/10/17 19:30', '2020/10/17 18:00', '2020/10/17 17:00',\n",
+       "       '2020/10/17 15:00', '2020/10/17 14:00', '2020/10/16 20:00',\n",
+       "       '2020/10/16 19:30', '2020/10/16 17:00', '2020/10/16 15:00',\n",
+       "       '2020/10/16 07:00', '2020/10/15 20:00', '2020/10/15 19:30',\n",
+       "       '2020/10/15 17:00', '2020/10/15 15:00', '2020/10/15 07:00',\n",
+       "       '2020/10/14 20:00', '2020/10/14 17:00', '2020/10/14 16:00',\n",
+       "       '2020/10/14 15:00', '2020/10/14 14:00', '2020/10/13 20:00',\n",
+       "       '2020/10/13 17:00', '2020/10/13 16:00', '2020/10/13 15:00',\n",
+       "       '2020/10/13 14:00', '2020/10/12 22:00', '2020/10/12 20:00',\n",
+       "       '2020/10/12 17:00', '2020/10/12 16:00', '2020/10/12 15:00',\n",
+       "       '2020/10/12 14:00', '2020/10/12 07:00', '2020/10/11 22:00',\n",
+       "       '2020/10/11 17:00', '2020/10/11 16:00', '2020/10/11 15:00',\n",
+       "       '2020/10/11 14:00', '2020/10/10 22:00', '2020/10/10 20:00',\n",
+       "       '2020/10/10 17:00', '2020/10/10 15:00', '2020/10/10 14:00',\n",
+       "       '2020/10/10 07:00', '2020/10/09 20:00', '2020/10/09 16:00',\n",
+       "       '2020/10/09 15:00', '2020/10/09 14:00', '2020/10/08 20:00',\n",
+       "       '2020/10/08 17:00', '2020/10/08 16:00', '2020/10/08 15:00',\n",
+       "       '2020/10/08 14:00', '2020/10/08 07:00', '2020/10/07 20:00',\n",
+       "       '2020/10/07 19:30', '2020/10/07 17:00', '2020/10/07 16:00',\n",
+       "       '2020/10/07 15:00', '2020/10/07 14:00', '2020/10/06 20:00',\n",
+       "       '2020/10/06 17:00', '2020/10/06 16:00', '2020/10/06 14:00',\n",
+       "       '2020/10/05 20:00', '2020/10/05 17:00', '2020/10/05 16:00',\n",
+       "       '2020/10/05 15:00', '2020/10/05 14:00', '2020/10/05 07:00',\n",
+       "       '2020/10/04 21:00', '2020/10/04 20:00', '2020/10/04 19:00',\n",
+       "       '2020/10/04 17:45', '2020/10/04 16:00', '2020/10/04 14:00',\n",
+       "       '2020/10/03 19:00', '2020/10/03 18:00', '2020/10/03 17:00',\n",
+       "       '2020/10/03 16:00', '2020/10/03 14:00', '2020/10/02 20:00',\n",
+       "       '2020/10/02 17:00', '2020/10/02 16:00', '2020/10/01 20:00',\n",
+       "       '2020/10/01 17:00', '2020/10/01 16:00', '2020/10/01 14:00',\n",
+       "       '2020/10/01 10:00', '2020/09/30 19:30', '2020/09/30 17:00',\n",
+       "       '2020/09/30 15:00', '2020/09/30 14:00', '2020/09/29 19:00',\n",
+       "       '2020/09/29 17:00', '2020/09/29 16:00', '2020/09/29 14:00',\n",
+       "       '2020/09/28 20:00', '2020/09/28 18:00', '2020/09/28 17:00',\n",
+       "       '2020/09/28 16:00', '2020/09/28 14:00', '2020/09/28 07:00',\n",
+       "       '2020/09/27 20:00', '2020/09/27 19:00', '2020/09/27 18:00',\n",
+       "       '2020/09/27 17:00', '2020/09/27 16:00', '2020/09/27 14:00',\n",
+       "       '2020/09/27 10:30', '2020/09/27 09:00', '2020/09/26 20:00',\n",
+       "       '2020/09/26 19:00', '2020/09/26 17:45', '2020/09/26 17:00',\n",
+       "       '2020/09/26 16:00', '2020/09/26 14:00', '2020/09/26 13:30',\n",
+       "       '2020/09/26 10:30', '2020/09/26 09:15', '2020/09/26 09:00',\n",
+       "       '2020/09/25 20:00', '2020/09/25 17:00', '2020/09/25 16:00',\n",
+       "       '2020/09/25 15:00', '2020/09/25 14:00', '2020/09/24 20:00',\n",
+       "       '2020/09/24 19:00', '2020/09/24 18:45', '2020/09/24 17:00',\n",
+       "       '2020/09/24 16:00', '2020/09/24 14:00', '2020/09/23 22:30',\n",
+       "       '2020/09/23 20:00', '2020/09/23 19:30', '2020/09/23 17:00',\n",
+       "       '2020/09/23 16:00', '2020/09/23 15:00', '2020/09/22 14:00',\n",
+       "       '2020/09/22 07:15', '2020/09/21 22:15', '2020/09/21 21:45',\n",
+       "       '2020/09/21 20:00', '2020/09/21 19:30', '2020/09/21 17:15',\n",
+       "       '2020/09/21 17:00', '2020/09/21 15:00', '2020/09/21 14:45',\n",
+       "       '2020/09/21 14:00', '2020/09/21 13:45', '2020/09/21 13:15',\n",
+       "       '2020/09/21 13:00', '2020/09/21 11:45', '2020/09/21 11:30',\n",
+       "       '2020/09/20 21:30', '2020/09/20 20:00', '2020/09/20 19:30',\n",
+       "       '2020/09/20 18:00', '2020/09/20 17:00', '2020/09/20 16:00',\n",
+       "       '2020/09/20 15:00', '2020/09/20 14:30', '2020/09/20 14:15',\n",
+       "       '2020/09/20 14:00', '2020/09/20 13:00', '2020/09/20 12:15',\n",
+       "       '2020/09/20 09:30', '2020/09/19 22:30', '2020/09/19 19:30',\n",
+       "       '2020/09/19 17:00', '2020/09/19 16:00', '2020/09/19 14:00',\n",
+       "       '2020/09/19 09:00', '2020/09/19 07:15', '2020/09/18 20:00',\n",
+       "       '2020/09/18 19:30', '2020/09/18 19:00', '2020/09/18 17:00',\n",
+       "       '2020/09/18 15:00', '2020/09/18 14:30', '2020/09/18 13:45',\n",
+       "       '2020/09/18 13:00', '2020/09/18 11:30', '2020/09/18 10:15',\n",
+       "       '2020/09/18 07:30', '2020/09/18 07:00', '2020/09/17 20:00',\n",
+       "       '2020/09/17 19:30', '2020/09/17 19:00', '2020/09/17 18:45',\n",
+       "       '2020/09/17 17:00', '2020/09/17 16:00', '2020/09/17 15:00',\n",
+       "       '2020/09/17 14:00', '2020/09/17 07:00', '2020/09/16 20:00',\n",
+       "       '2020/09/16 19:30', '2020/09/16 17:00', '2020/09/16 16:00',\n",
+       "       '2020/09/16 14:00', '2020/09/16 07:15', '2020/09/15 22:00',\n",
+       "       '2020/09/15 20:00', '2020/09/15 19:30', '2020/09/15 19:00',\n",
+       "       '2020/09/15 16:00', '2020/09/15 14:00', '2020/09/15 09:00',\n",
+       "       '2020/09/14 21:00', '2020/09/14 19:30', '2020/09/14 19:00',\n",
+       "       '2020/09/14 17:00', '2020/09/14 16:00', '2020/09/14 14:00',\n",
+       "       '2020/09/14 07:00', '2020/09/13 21:00', '2020/09/13 19:30',\n",
+       "       '2020/09/13 19:00', '2020/09/13 18:45', '2020/09/13 17:00',\n",
+       "       '2020/09/13 16:00', '2020/09/13 14:15', '2020/09/13 14:00',\n",
+       "       '2020/09/13 12:45', '2020/09/12 21:00', '2020/09/12 20:00',\n",
+       "       '2020/09/12 19:30', '2020/09/12 17:45', '2020/09/12 17:00',\n",
+       "       '2020/09/12 14:45', '2020/09/12 07:15', '2020/09/12 07:00',\n",
+       "       '2020/09/11 22:00', '2020/09/11 21:45', '2020/09/11 20:00',\n",
+       "       '2020/09/11 19:30', '2020/09/11 17:00', '2020/09/11 16:00',\n",
+       "       '2020/09/11 07:15', '2020/09/11 07:00', '2020/09/10 22:00',\n",
+       "       '2020/09/10 20:00', '2020/09/10 19:30', '2020/09/10 19:00',\n",
+       "       '2020/09/10 18:45', '2020/09/10 17:00', '2020/09/10 14:00',\n",
+       "       '2020/09/10 07:00', '2020/09/09 20:00', '2020/09/09 19:30',\n",
+       "       '2020/09/09 17:45', '2020/09/09 17:00', '2020/09/09 16:00',\n",
+       "       '2020/09/09 14:00', '2020/09/08 20:00', '2020/09/08 19:30',\n",
+       "       '2020/09/08 19:00', '2020/09/08 17:00', '2020/09/08 16:00',\n",
+       "       '2020/09/08 07:00', '2020/09/07 22:30', '2020/09/07 21:45',\n",
+       "       '2020/09/07 20:00', '2020/09/07 19:30', '2020/09/07 19:00',\n",
+       "       '2020/09/07 17:00', '2020/09/07 16:00', '2020/09/07 14:00',\n",
+       "       '2020/09/07 07:00', '2020/09/06 20:00', '2020/09/06 19:30',\n",
+       "       '2020/09/06 19:00', '2020/09/06 18:00', '2020/09/06 17:00',\n",
+       "       '2020/09/06 16:00', '2020/09/06 15:15', '2020/09/06 14:45',\n",
+       "       '2020/09/06 14:00', '2020/09/06 12:45', '2020/09/06 10:45',\n",
+       "       '2020/09/06 09:30', '2020/09/06 07:15', '2020/09/06 07:00',\n",
+       "       '2020/09/05 20:00', '2020/09/05 19:30', '2020/09/05 19:00',\n",
+       "       '2020/09/05 18:45', '2020/09/05 17:45', '2020/09/05 17:00',\n",
+       "       '2020/09/05 16:00', '2020/09/05 14:45', '2020/09/05 14:15',\n",
+       "       '2020/09/05 14:00', '2020/09/05 13:45', '2020/09/05 13:30',\n",
+       "       '2020/09/05 10:15', '2020/09/05 09:45', '2020/09/05 07:00',\n",
+       "       '2020/09/04 20:00', '2020/09/04 19:30', '2020/09/04 19:00',\n",
+       "       '2020/09/04 17:00', '2020/09/04 15:00', '2020/09/04 14:00',\n",
+       "       '2020/09/04 07:00', '2020/09/03 20:00', '2020/09/03 19:30',\n",
+       "       '2020/09/03 19:00'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "# check data format is consistent\n",
+    "boulder_data['current_time'].unique()"
    ]
   },
   {
@@ -939,18 +1104,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Save the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boulder_data.to_csv(\"~/Desktop/coding/boulder_data/boulderdata.csv\", index=False)\n"
+   ]
   },
   {
    "cell_type": "code",
